plugins {
	id 'org.springframework.boot' version '2.7.4'
	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
	id 'java'
	id 'groovy'
}

group = 'dev.marcinromanowski'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.kafka:spring-kafka'
	implementation 'javax.validation:validation-api:2.0.1.Final'
	implementation 'org.hibernate.validator:hibernate-validator:6.1.5.Final'
	implementation "com.fasterxml.jackson.module:jackson-module-parameter-names:$jacksonVersion"
	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:$jacksonVersion"
	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"

	compileOnly "org.projectlombok:lombok:$lombokVersion"
	annotationProcessor "org.projectlombok:lombok:$lombokVersion"
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation platform("org.spockframework:spock-bom:$spockVersion")
	testImplementation 'org.spockframework:spock-core'
	testImplementation 'org.spockframework:spock-spring'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
	testImplementation "org.testcontainers:kafka:1.17.4"
}

tasks.named('test') {
	jvmArgs(['--enable-preview'])
	useJUnitPlatform()
}

tasks.withType(JavaCompile).all {
	options.compilerArgs += ['--enable-preview']
}
